Bug 459013 - Fill Tool does not recognize the frames of an animation
Summary: Fill Tool does not recognize the frames of an animation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.1.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Deif Lou
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-12 07:27 UTC by bugs-bunny
Modified: 2022-09-20 12:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshots to demonstrate the bug (338.24 KB, image/jpeg)
2022-09-12 07:27 UTC, bugs-bunny
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bugs-bunny 2022-09-12 07:27:04 UTC
Created attachment 151997 [details]
Screenshots to demonstrate the bug

SUMMARY

The fill tool is not recognizing the frames of an animated layer correctly. Have a look at the attached pictures. There is one layer for the line art. It has 3 frames and the layer color is set to "green". There is a second layer for the color fills. It has also 3 frames and I wanted to colorfill the closed areas of the line art layer using the fill tool (paint bucket) - as I did in older versions of Krita. The fill tool is set to recognize the green layer. Now, when I try to fill the areas on frame 2 and 3 (and so on), the tool only recognize the first frame of the line art layer. 

I think this is a bug in Krita 5.1.0 and it should be fixed, because this standard way to color an animation is used by many users. 

I reproduced this bug on different Win 10 computers.


STEPS TO REPRODUCE
1. Make an animation layer with some frames of line art. Set the layers color "green".
2. Make another animation layer for the color fill. Put some blanc frames in it.
3. Use the color fill tool and set it's reference to the "green" color labeled layer(s).
4. Try to fill the frames. 

OBSERVED RESULT
When you are on frame 2 or 3, the color fill tool only recognize the line art of frame 1. 

EXPECTED RESULT
When on frame 2, the fill tool should recognize frame 2 of the line art. When on frame 3, the fill tool should recognize frame 3 of the line art ...

SOFTWARE/OS VERSIONS
Windows: Win 10 Pro - 21H2
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Deif Lou 2022-09-16 12:54:38 UTC
Related to https://bugs.kde.org/show_bug.cgi?id=458867
Comment 2 Bug Janitor Service 2022-09-17 20:41:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1588
Comment 3 Deif Lou 2022-09-20 10:27:22 UTC
Git commit 94aeaddf66b118e3b7e7d0e091986fc4aad32bc9 by Deif Lou.
Committed on 20/09/2022 at 10:26.
Pushed by deiflou into branch 'master'.

Fix regression when using KisKisMergeLabeledLayersCommand

From 5.1 on KisMergeLabeledLayersCommand seemed to always use the first frame
to create the merged reference device
Related: bug 458867

M  +20   -16   libs/image/commands_new/KisMergeLabeledLayersCommand.cpp
M  +52   -7    libs/image/commands_new/KisMergeLabeledLayersCommand.h
M  +1    -3    libs/ui/KisView.cpp
M  +20   -15   plugins/tools/basictools/kis_tool_fill.cc
M  +1    -0    plugins/tools/basictools/kis_tool_fill.h
M  +7    -4    plugins/tools/selectiontools/kis_tool_select_contiguous.cc
M  +1    -0    plugins/tools/selectiontools/kis_tool_select_contiguous.h
M  +7    -4    plugins/tools/selectiontools/kis_tool_select_similar.cc
M  +1    -0    plugins/tools/selectiontools/kis_tool_select_similar.h
M  +6    -4    plugins/tools/tool_enclose_and_fill/KisToolEncloseAndFill.cpp
M  +3    -2    plugins/tools/tool_enclose_and_fill/KisToolEncloseAndFill.h

https://invent.kde.org/graphics/krita/commit/94aeaddf66b118e3b7e7d0e091986fc4aad32bc9
Comment 4 Deif Lou 2022-09-20 12:10:00 UTC
Git commit 3d0b7143030956067a9d0e4f3f164143df215eab by Deif Lou.
Committed on 20/09/2022 at 12:08.
Pushed by deiflou into branch 'krita/5.1'.

Fix regression when using KisKisMergeLabeledLayersCommand

From 5.1 on KisMergeLabeledLayersCommand seemed to always use the first frame
to create the merged reference device
Related: bug 458867

M  +3    -0    plugins/tools/basictools/kis_tool_fill.cc
M  +4    -0    plugins/tools/selectiontools/kis_tool_select_contiguous.cc
M  +4    -0    plugins/tools/selectiontools/kis_tool_select_similar.cc
M  +4    -0    plugins/tools/tool_enclose_and_fill/KisToolEncloseAndFill.cpp

https://invent.kde.org/graphics/krita/commit/3d0b7143030956067a9d0e4f3f164143df215eab