Fix regression when using KisKisMergeLabeledLayersCommand

From 5.1 on KisMergeLabeledLayersCommand seemed to always use the first frame
to create the merged reference device

BUG:459013
BUG:458867